--- a/SureService/src/pages/contact-edit/contact-edit.html
+++ b/SureService/src/pages/contact-edit/contact-edit.html
@@ -7,32 +7,32 @@
 <ion-content padding>
     <form [formGroup]="form">
       <ion-item>
-        <ion-label stacked>Nome</ion-label>
+        <ion-label floating>Nome</ion-label>
         <ion-input type="text" formControlName="name"></ion-input>
       </ion-item>
 
       <ion-item>
-          <ion-label stacked>Descrição</ion-label>
+          <ion-label floating>Descrição</ion-label>
           <ion-input type="text" formControlName="descricao"></ion-input>
       </ion-item>
   
       <ion-item>
-        <ion-label stacked>Telefone</ion-label>
+        <ion-label floating>Telefone</ion-label>
         <ion-input type="tel" formControlName="tel"></ion-input>
       </ion-item>
 
       <ion-item>
-          <ion-label stacked>Latitute</ion-label>
+          <ion-label floating>Latitute</ion-label>
           <ion-input type="text" formControlName="latitude"></ion-input>
       </ion-item>
 
       <ion-item>
-          <ion-label stacked>Longitude</ion-label>
+          <ion-label floating>Longitude</ion-label>
           <ion-input type="text" formControlName="longitude"></ion-input>
       </ion-item>
 
       <ion-item>
-          <ion-label stacked>Categoria</ion-label>
+          <ion-label floating>Categoria</ion-label>
           <ion-select formControlName="categoria">
             <ion-option value="Limpeza">Limpeza</ion-option>
             <ion-option value="Manutenção">Manutenção</ion-option>
