--- a/SureService/src/pages/login/login.html
+++ b/SureService/src/pages/login/login.html
@@ -10,10 +10,12 @@
 
       <ion-list>
         <ion-item>
-          <ion-input required type="text" placeholder="E-mail" #usuario></ion-input>
+          <ion-label floating>E-mail</ion-label>
+          <ion-input required type="text" #usuario></ion-input>
         </ion-item>
         <ion-item>
-            <ion-input required type="password" placeholder="Senha" #senha></ion-input>
+          <ion-label floating>Senha</ion-label>
+          <ion-input required type="password" #senha></ion-input>
         </ion-item>
       </ion-list>
       <div style="text-align: right">
