--- a/SureService/src/pages/signup/signup.html
+++ b/SureService/src/pages/signup/signup.html
@@ -9,10 +9,12 @@
       <p>Crie uma conta na SURE SERVICES.</p><BR><BR>
       <ion-list>
         <ion-item>
-          <ion-input type="email" placeholder="E-mail" required #usuario></ion-input>
+          <ion-label floating>E-mail</ion-label>
+          <ion-input type="email" required #usuario></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input type="password" placeholder="Senha" required #senha></ion-input>
+          <ion-label floating>Senha</ion-label>
+          <ion-input type="password" required #senha></ion-input>
         </ion-item>
       </ion-list>
       <BR>
