Ajuste para adicionar marcadores
Pegar dados do banco e colocar no mapa.

--- a/SureService/src/pages/contact-edit/contact-edit.html
+++ b/SureService/src/pages/contact-edit/contact-edit.html
@@ -36,6 +36,12 @@
           <ion-select formControlName="categoria">
             <ion-option value="Limpeza">Limpeza</ion-option>
             <ion-option value="Manutenção">Manutenção</ion-option>
+            <ion-option value="Pintura">Pintura</ion-option>
+            <ion-option value="Educação">Educação</ion-option>
+            <ion-option value="Transporte">Transporte</ion-option>
+            <ion-option value="Babá">Babá</ion-option>
+            <ion-option value="Jardinagem">Jardinagem</ion-option>
+            <ion-option value="Outros">Outros</ion-option>
           </ion-select>
       </ion-item>
   
