--- a/SureService/src/pages/login/login.html
+++ b/SureService/src/pages/login/login.html
@@ -24,7 +24,7 @@
       <BR>
       <div>
         <ion-col>
-            <button (click)="Login()" ion-button full>Entrar</button>
+            <button (click)="Login()" style="height: 50px" ion-button full>Entrar</button>
         </ion-col>
       </div>
 
