--- a/SureService/src/pages/signup/signup.html
+++ b/SureService/src/pages/signup/signup.html
@@ -20,7 +20,7 @@
       <BR>
       <div>
         <ion-col>
-            <button (click)="createAccount()" ion-button full>Criar conta</button>
+            <button (click)="createAccount()" style="height: 50px" ion-button full>Criar conta</button>
         </ion-col>
       </div>
 
