--- a/SureService/src/pages/home/home.html
+++ b/SureService/src/pages/home/home.html
@@ -1,10 +1,11 @@
+<!--
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
   </ion-navbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content>
   <div #map id="map"></div>
