--- a/SureService/src/pages/contact-edit/contact-edit.html
+++ b/SureService/src/pages/contact-edit/contact-edit.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Inserir anuncio</ion-title>
+        <ion-title>{{title}}</ion-title>
     </ion-navbar>
   </ion-header>
 
