--- a/SureService/src/pages/anuncio/anuncio.html
+++ b/SureService/src/pages/anuncio/anuncio.html
@@ -1,18 +1,14 @@
-<!--
-  Generated template for the AnuncioPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>anuncio</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-    <p>{{ contact.name }}</p>
+<ion-content>
+  <div style="padding: 30px;">
+    <h1>{{ contact.name }}</h1>
     <p>{{ contact.descricao }}</p>
     <p>{{ contact.tel }}</p>
     <p>{{ contact.categoria }}</p>
+  </div>
 </ion-content>
