--- a/SureService/src/pages/contact-edit/contact-edit.html
+++ b/SureService/src/pages/contact-edit/contact-edit.html
@@ -5,6 +5,7 @@
   </ion-header>
 
 <ion-content padding>
+  <div style="padding: 25px;">
     <form [formGroup]="form">
       <ion-item>
         <ion-label floating>Nome</ion-label>
@@ -49,4 +50,5 @@
         <button ion-button style="height: 50px" block type="submit" [disabled]="!form.valid" (click)="onSubmit()">Salvar</button>
       </div>
     </form>
+  </div>
 </ion-content>
