--- a/SureService/src/pages/initial/initial.html
+++ b/SureService/src/pages/initial/initial.html
@@ -4,7 +4,7 @@
     <p class="Descricao">Encontre o que você precisa, onde estiver.</p><BR>
     <div>
         <ion-col>
-          <button id="btn_Iniciar" block outline expand="block" (click)="SignUp()" style="height: 50px" ion-button>COMEÇAR</button> <BR>
+          <button id="btn_Iniciar" block outline expand="block" (click)="SignUp()" ion-button>COMEÇAR</button> <BR>
           <button (click)="Login()" block outline expand="block" style="height: 50px" ion-button>ENTRAR</button>
         </ion-col>
     </div>
