--- a/SureService/src/pages/login/login.html
+++ b/SureService/src/pages/login/login.html
@@ -19,7 +19,7 @@
         </ion-item>
       </ion-list>
       <div style="text-align: right">
-        <a (click)="forgotpassword()">Esqueceu a senha?</a>
+        <a (click)="presentPrompt()">Esqueceu a senha?</a>
       </div>
       <BR>
       <div>
