Ajuste no Design do Mapa

--- a/SureService/src/pages/home/home.html
+++ b/SureService/src/pages/home/home.html
@@ -11,7 +11,7 @@
   <div #map id="map"></div>
 
   <ion-fab bottom right>
-    <button ion-fab color="primary" (click)="newContact()">
+    <button ion-fab color="dark" (click)="newContact()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
