--- a/SureService/src/pages/initial/initial.html
+++ b/SureService/src/pages/initial/initial.html
@@ -5,7 +5,7 @@
     <div>
         <ion-col>
           <button id="btn_Iniciar" block outline expand="block" (click)="SignUp()" ion-button>COMEÇAR</button> <BR>
-          <button (click)="Login()" block outline expand="block" style="height: 50px" ion-button>ENTRAR</button>
+          <button (click)="Login()" block outline expand="block" style="height: 50px; font-weight: bold;color: white;background: #222;border: none" ion-button>ENTRAR</button>
         </ion-col>
     </div>
   </div>
