--- a/SureService/src/pages/login/login.html
+++ b/SureService/src/pages/login/login.html
@@ -24,12 +24,12 @@
       <BR>
       <div>
         <ion-col>
-            <button id="btn_login" (click)="Login()" block outline ion-button>Entrar</button>
+            <button id="btn_login" (click)="Login()" block outline ion-button>ENTRAR</button>
         </ion-col>
       </div>
 
       <div class="subtitulo">
-        <ion-label>Não tem uma conta? <a (click)="SignUp()"> Criar uma conta</a></ion-label>
+        <ion-label>Não tem uma conta? <a (click)="SignUp()"> Criar uma conta.</a></ion-label>
       </div>
     </div>
 </ion-content>
