--- a/SureService/src/pages/signup/signup.html
+++ b/SureService/src/pages/signup/signup.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="subtitulo">
-        <ion-label>Já possui uma conta?<a (click)="Login()"> Entrar</a></ion-label>
+        <ion-label>Já possui uma conta?<a (click)="Login()"> Entrar.</a></ion-label>
       </div>
 
     </div>
