--- a/SureService/src/pages/signup/signup.html
+++ b/SureService/src/pages/signup/signup.html
@@ -20,7 +20,7 @@
       <BR>
       <div>
         <ion-col>
-            <button id="btn_Iniciar" (click)="createAccount()" block outline ion-button>Criar conta</button>
+            <button id="btn_Iniciar" (click)="createAccount()" block outline ion-button>CRIAR CONTA</button>
         </ion-col>
       </div>
 
