--- a/SureService/src/pages/adverts/adverts.html
+++ b/SureService/src/pages/adverts/adverts.html
@@ -26,7 +26,6 @@
   </ion-content>
   
   <ion-footer>
-      <ion-toolbar>
         <ion-grid>  
           <ion-row text-center>
 
@@ -39,17 +38,17 @@
 
             <ion-col>  
                 <button (click)="NavAdverts()" ion-button clear>
-                  <ion-icon name='list-box' style="zoom: 1.8;color:#0052EB"></ion-icon>
-                  <p style="color:#0052EB;padding: 5px;">Anuncios</p>
+                  <ion-icon name='list-box' style="zoom: 1.8;color:#222"></ion-icon>
+                  <p style="color:#222;padding: 5px;zoom: 1.1">Anuncios</p>
                 </button>
               </ion-col>
-                  
+            <!--      
             <ion-col>  
               <button (click)="NavProfile()" style="color: #657280;" ion-button clear>
                 <ion-icon name='person' style="zoom: 1.5;"></ion-icon>
                 <p style="padding: 5px;">Conta</p>
               </button>
-            </ion-col>
+            </ion-col>--->
     <!--
             <ion-col>  
               <button ion-button clear>
@@ -60,5 +59,4 @@
     
           </ion-row>  
         </ion-grid>
-      </ion-toolbar>
     </ion-footer>
