--- a/SureService/src/pages/home/home.html
+++ b/SureService/src/pages/home/home.html
@@ -1,17 +1,17 @@
-<!--
+
 <ion-header>
-  <ion-navbar>
+  <ion-navbar transparent>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon name="menu" style="zoom: 1.4;color: #222;"></ion-icon>
     </button>
   </ion-navbar>
-</ion-header>-->
+</ion-header>
 
 <ion-content>
   <div #map id="map"></div>
 
   <ion-fab bottom right>
-    <button ion-fab color="dark" (click)="newContact()">
+    <button ion-fab color="primary" (click)="newContact()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
@@ -19,14 +19,13 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
     <ion-grid>  
       <ion-row text-center>
 
         <ion-col>   
           <button (click)="NavMapa()" ion-button clear>
-            <ion-icon name='home' style="zoom: 1.8;color:#0052EB"></ion-icon>
-            <p style="color:#0052EB; padding: 5px;">Home</p>
+            <ion-icon name='home' style="zoom: 1.8;color:#222"></ion-icon>
+            <p style="color:#222; padding: 5px;zoom: 1.1">Home</p>
           </button>
         </ion-col>
 
@@ -37,12 +36,13 @@
             </button>
           </ion-col>
 
-        <ion-col>  
-          <button (click)="NavProfile()" style="color: #657280;" ion-button clear>
-            <ion-icon name='person' style="zoom: 1.5;"></ion-icon>
-            <p style="padding: 5px;">Conta</p>
-          </button>
-        </ion-col>
+                     <!--      
+            <ion-col>  
+              <button (click)="NavProfile()" style="color: #657280;" ion-button clear>
+                <ion-icon name='person' style="zoom: 1.5;"></ion-icon>
+                <p style="padding: 5px;">Conta</p>
+              </button>
+            </ion-col>--->
 <!--
         <ion-col>  
           <button ion-button clear>
@@ -53,5 +53,4 @@
 
       </ion-row>  
     </ion-grid>
-  </ion-toolbar>
 </ion-footer>
