--- a/SureService/src/pages/home/home.html
+++ b/SureService/src/pages/home/home.html
@@ -25,31 +25,30 @@
         <ion-col>   
           <button (click)="NavMapa()" ion-button clear>
             <ion-icon name='home' style="zoom: 1.8;color:#222"></ion-icon>
-            <p style="color:#222; padding: 5px;zoom: 1.1">Home</p>
+           <!-- <p style="color:#222; padding: 5px;zoom: 1.1">Home</p>-->
           </button>
         </ion-col>
 
         <ion-col>  
             <button (click)="NavAdverts()" style="color: #657280;" ion-button clear>
               <ion-icon name='list-box' style="zoom: 1.5;"></ion-icon>
-              <p style="padding: 5px;">Anuncios</p>
+             <!-- <p style="padding: 5px;">Anuncios</p>-->
             </button>
           </ion-col>
 
-                     <!--      
             <ion-col>  
-              <button (click)="NavProfile()" style="color: #657280;" ion-button clear>
-                <ion-icon name='person' style="zoom: 1.5;"></ion-icon>
-                <p style="padding: 5px;">Conta</p>
+              <button style="color: #657280;" ion-button clear>
+                <ion-icon name='contact' style="zoom: 1.5;"></ion-icon>
+               <!-- <p style="padding: 5px;">Perfil</p>-->
               </button>
-            </ion-col>--->
-<!--
+            </ion-col>
+
         <ion-col>  
-          <button ion-button clear>
-            <ion-icon name='settings' style="zoom: 1.5;"></ion-icon>
+          <button style="color: #657280;" ion-button clear>
+            <ion-icon name='chatbubbles' style="zoom: 1.5;"></ion-icon>
+           <!-- <p style="padding: 5px;">Conversas</p>-->
           </button>
-          Configurações
-        </ion-col>-->
+        </ion-col>
 
       </ion-row>  
     </ion-grid>
