--- a/SureService/src/pages/home/home.html
+++ b/SureService/src/pages/home/home.html
@@ -18,34 +18,5 @@
   
 </ion-content>
 
-<ion-footer>
-    <ion-grid>  
-      <ion-row text-center>
 
-        <ion-col>   
-          <button (click)="NavMapa()" ion-button clear>
-            <ion-icon name='home' style="zoom: 1.5;color:#222"></ion-icon>
-          </button>
-        </ion-col>
-
-        <ion-col>  
-            <button (click)="NavAdverts()" style="color: #657280;" ion-button clear>
-              <ion-icon name='list-box' style="zoom: 1.3;"></ion-icon>
-            </button>
-          </ion-col>
-
-            <ion-col>  
-              <button style="color: #657280;" ion-button clear>
-                <ion-icon name='contact' style="zoom: 1.3;"></ion-icon>
-              </button>
-            </ion-col>
-
-        <ion-col>  
-          <button style="color: #657280;" ion-button clear>
-            <ion-icon name='chatbubbles' style="zoom: 1.3;"></ion-icon>
-          </button>
-        </ion-col>
-
-      </ion-row>  
-    </ion-grid>
-</ion-footer>
+<page-tabs></page-tabs>
