--- a/SureService/src/pages/home/home.html
+++ b/SureService/src/pages/home/home.html
@@ -10,13 +10,12 @@
 <ion-content>
   <div #map id="map"></div>
 
-  <ion-fab bottom right>
-    <button ion-fab color="primary" (click)="newContact()">
+  <ion-fab top right>
+    <button ion-fab color="dark" (click)="newContact()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
   
 </ion-content>
-
 
 <page-tabs></page-tabs>
