--- a/SureService/src/pages/perfil/perfil.html
+++ b/SureService/src/pages/perfil/perfil.html
@@ -1,16 +1,22 @@
-<!--
-  Generated template for the PerfilPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>perfil</ion-title>
+      <button ion-button menuToggle>
+        <ion-icon name="menu" style="zoom: 1.4;color: #222;"></ion-icon>
+      </button>
+    <ion-title>Perfil</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+    <div *ngIf="user != null" style="padding: 20px; text-align: center;">
+      <ion-icon name='contact' style="zoom: 5.5;"></ion-icon>
+      <p style="color: #DEDEDC;">ID: {{ user.uid }}</p>
+      <p><b>{{ user.displayName }}</b></p>
+      <p>{{ user.email }}</p>
+      <p>{{ user.tel }}</p>
+      <p>Email verificado: <b>{{ user.emailVerified }}</b></p>
+    </div>
+    <button id="btn_Iniciar" block outline expand="block" (click)="AlterPerfil()" ion-button>Atualizar Informações</button> <BR>
 </ion-content>
 
+<page-tabs></page-tabs>
