--- a/SureService/src/pages/profile/profile.html
+++ b/SureService/src/pages/profile/profile.html
@@ -8,17 +8,13 @@
 </ion-header>
 
 <ion-content padding>
-    <div *ngIf="user != null" style="padding: 20px;">
-      <ion-icon name='contact' style="zoom: 5.0;"></ion-icon>
-      <h3>Bem vindo: </h3>
-      <p>{{ user.email }}</p>
-        
-      <ion-list style="padding: 15px;">
+    <div *ngIf="user != null">
+      <ion-list>
         <button ion-item (click)="alterPassAlert()">
-          <div style="color: #0052EB;">Alterar Senha</div>
+          <div style="color: #0052EB; padding: 20px;">Alterar Senha</div>
         </button>
         <button ion-item (click)="deleteConfirm()">
-          <div style="color: #0052EB;">Deletar Conta</div>
+          <div style="color: #0052EB; padding: 25px;">Deletar Conta</div>
         </button>
       </ion-list>
     </div>
