--- a/SureService/src/pages/tabs/tabs.html
+++ b/SureService/src/pages/tabs/tabs.html
@@ -1,27 +1,27 @@
-<ion-footer>
+<ion-footer style="background: #F2F2F2;border: 1px solid #ccc;">
     <ion-grid>  
       <ion-row text-center>
         <ion-col>   
           <button (click)="NavMapa()" ion-button clear>
-            <ion-icon name='home' style="zoom: 1.3;color:#657280"></ion-icon>
+            <ion-icon name='home' style="zoom: 1.8;color:#657280"></ion-icon>
           </button>
         </ion-col>
 
         <ion-col>  
             <button (click)="NavAdverts()" style="color: #657280;" ion-button clear>
-              <ion-icon name='list-box' style="zoom: 1.3;"></ion-icon>
+              <ion-icon name='list-box' style="zoom: 1.8;"></ion-icon>
             </button>
           </ion-col>
 
             <ion-col>  
               <button (click)="NavPerfil()" style="color: #657280;" ion-button clear>
-                <ion-icon name='contact' style="zoom: 1.3;"></ion-icon>
+                <ion-icon name='contact' style="zoom: 1.8;"></ion-icon>
               </button>
             </ion-col>
 
         <ion-col>  
           <button (click)="NavConversations()" style="color: #657280;" ion-button clear>
-            <ion-icon name='chatbubbles' style="zoom: 1.3;"></ion-icon>
+            <ion-icon name='chatbubbles' style="zoom: 1.8;"></ion-icon>
           </button>
         </ion-col>
 
