--- a/SureService/src/pages/profile/profile.html
+++ b/SureService/src/pages/profile/profile.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu" style="zoom: 1.4;color: #222;"></ion-icon>
+      <ion-icon name="menu" style="zoom: 1.4;color: white;"></ion-icon>
     </button>
     <ion-title>Configurações da Conta</ion-title>
   </ion-navbar>
