--- a/SureService/src/pages/tabs/tabs.html
+++ b/SureService/src/pages/tabs/tabs.html
@@ -3,26 +3,30 @@
       <ion-row text-center>
         <ion-col>   
           <button (click)="NavMapa()" ion-button clear>
-            <ion-icon name='home' style="zoom: 1.8;color:#657280"></ion-icon>
+            <ion-icon name='home' style="zoom: 1.5;color:#222"></ion-icon>
           </button>
+          <div style="font-size: 10px;">Pagina Inicial</div>
         </ion-col>
 
         <ion-col>  
-            <button (click)="NavAdverts()" style="color: #657280;" ion-button clear>
-              <ion-icon name='list-box' style="zoom: 1.8;"></ion-icon>
+            <button (click)="NavAdverts()" style="color: #222;" ion-button clear>
+              <ion-icon name='list-box' style="zoom: 1.5;"></ion-icon>
             </button>
+            <div style="font-size: 10px;">Meus Anuncios</div>
           </ion-col>
 
             <ion-col>  
-              <button (click)="NavPerfil()" style="color: #657280;" ion-button clear>
-                <ion-icon name='contact' style="zoom: 1.8;"></ion-icon>
+              <button (click)="NavPerfil()" style="color: #222;" ion-button clear>
+                <ion-icon name='contact' style="zoom: 1.5;"></ion-icon>
               </button>
+            <div style="font-size: 10px;">Perfil</div>
             </ion-col>
 
         <ion-col>  
-          <button (click)="NavConversations()" style="color: #657280;" ion-button clear>
-            <ion-icon name='chatbubbles' style="zoom: 1.8;"></ion-icon>
+          <button (click)="NavConversations()" style="color: #222;" ion-button clear>
+            <ion-icon name='chatbubbles' style="zoom: 1.5;"></ion-icon>
           </button>
+          <div style="font-size: 10px;">Conversas</div>
         </ion-col>
 
       </ion-row>  
