--- a/SureService/src/pages/adverts/adverts.html
+++ b/SureService/src/pages/adverts/adverts.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar >
       <button ion-button menuToggle>
-        <ion-icon name="menu" style="zoom: 1.4;color: #222;"></ion-icon>
+        <ion-icon name="menu" style="zoom: 1.4;color: white;"></ion-icon>
       </button>
     <ion-title>Meus Anuncios</ion-title>
   </ion-navbar>
@@ -9,10 +9,10 @@
 
 <ion-content>
 
-  <ion-list style="padding: 15px;" inset>
+  <ion-list style="padding: 8px;">
     <button ion-item *ngFor="let contact of contacts | async" (click)="editContact(contact)">
         <h1>{{ contact.name }}</h1>
-        <p>{{ contact.descricao }}</p>
+        <p>Descrição: {{ contact.descricao }}</p>
         <p>Telefone: {{ contact.tel }}</p>
         <p>Categoria: {{ contact.categoria }}</p>
     </button>  
@@ -20,5 +20,4 @@
 
 </ion-content>
 
-  <page-tabs></page-tabs>
   
