--- a/SureService/src/pages/home/home.html
+++ b/SureService/src/pages/home/home.html
@@ -10,7 +10,7 @@
 <ion-content>
   <div #map id="map"></div>
 
-  <ion-fab top right>
+  <ion-fab bottom right>
     <button ion-fab color="dark" (click)="newContact()">
       <ion-icon name="add"></ion-icon>
     </button>
@@ -18,4 +18,3 @@
   
 </ion-content>
 
-<page-tabs></page-tabs>
