--- a/SureService/src/pages/perfil/perfil.html
+++ b/SureService/src/pages/perfil/perfil.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
       <button ion-button menuToggle>
-        <ion-icon name="menu" style="zoom: 1.4;color: #222;"></ion-icon>
+        <ion-icon name="menu" style="zoom: 1.4;color: white;"></ion-icon>
       </button>
     <ion-title>Perfil</ion-title>
   </ion-navbar>
@@ -15,8 +15,9 @@
       <p>{{ user.email }}</p>
       <p>{{ user.tel }}</p>
       <p>Email verificado: <b>{{ user.emailVerified }}</b></p>
+      
+    <!--  <div>
+          <button  block outline (click)="AlterPerfil()" ion-button>Atualizar Informações</button>
+      </div>-->
     </div>
-    <button id="btn_Iniciar" block outline expand="block" (click)="AlterPerfil()" ion-button>Atualizar Informações</button> <BR>
 </ion-content>
-
-<page-tabs></page-tabs>
